add: get Announcement by uuid
