# routes/api.php
@@ -27,18 +27,25 @@ Route::controller(PostController::class)->middleware(['auth:api', 'role:admin'])
         Route::get('/{uuid}', 'getPostByUUid');
     });
 });
-Route::controller(SiteController::class)->middleware(['auth:api', 'role:admin'])->prefix('sites')->group(function () {
-    Route::post('/', 'createSite');
-    Route::post('/{uuid}', 'updateSite');
-    Route::delete('/{uuid}', 'deleteSite');
-    Route::withoutMiddleware(['auth:api', 'role:admin'])->get('/', 'getSites');
-});
+
 Route::controller(AnnouncementController::class)->middleware(['auth:api', 'role:admin'])->prefix('announcements')->group(function () {
     Route::post('/update', 'updateAnnouncement');
     Route::middleware("throttle:20,1")->patch('/{uuid}', 'updateAnnouncementVisibility');
     Route::post('/', 'createAnnouncement');
     Route::delete('/{uuid}', 'deleteAnnouncement');
-    Route::withoutMiddleware(['auth:api', 'role:admin'])->get('/', 'getAnnouncements');
+    Route::withoutMiddleware(['auth:api', 'role:admin'])->group(function () {
+        Route::get('/', 'getAnnouncements');
+        Route::get('/{uuid}', 'getAnnouncementByUUid');
+    });
+});
+Route::controller(InformationController::class)->middleware(['auth:api', 'role:admin'])->prefix('info')->group(function () {
+    Route::post('/', 'createInformation');
+    Route::delete('/{uuid}', 'deleteInformation');
+    Route::post('/{uuid}', 'updateInformation');
+    Route::withoutMiddleware(['auth:api', 'role:admin'])->group(function () {
+        Route::get('/', 'getInformations');
+        Route::get('/{uuid}', 'getInformationByUUid');
+    });
 });
 Route::controller(CategoryController::class)->middleware(['auth:api', 'role:admin'])->prefix('categories')->group(function () {
     Route::post('/', 'createCategory');
@@ -46,9 +53,9 @@ Route::controller(CategoryController::class)->middleware(['auth:api', 'role:admi
     Route::put('/{categoryId}', 'updateCategory');
     Route::withoutMiddleware(['auth:api', 'role:admin'])->get('/', 'getCategories');
 });
-Route::controller(InformationController::class)->middleware(['auth:api', 'role:admin'])->prefix('info')->group(function () {
-    Route::post('/', 'createInformation');
-    Route::delete('/{uuid}', 'deleteInformation');
-    Route::post('/{uuid}', 'updateInformation');
-    Route::withoutMiddleware(['auth:api', 'role:admin'])->get('/', 'getInformations');
+Route::controller(SiteController::class)->middleware(['auth:api', 'role:admin'])->prefix('sites')->group(function () {
+    Route::post('/', 'createSite');
+    Route::post('/{uuid}', 'updateSite');
+    Route::delete('/{uuid}', 'deleteSite');
+    Route::withoutMiddleware(['auth:api', 'role:admin'])->get('/', 'getSites');
 });
